fix(exam schedule admin): fix date and time icon to be visible in dark mode

--- a/src/theme/native-elements.scss
+++ b/src/theme/native-elements.scss
@@ -112,3 +112,11 @@
 //     }
 //   }
 // }
+
+.native-input[type=date]::-webkit-calendar-picker-indicator {
+  filter: invert(0.5);
+}
+
+.native-input[type=time]::-webkit-calendar-picker-indicator {
+  filter: invert(0.5);
+}
